tests/negative/gold/class-assign2-test.gold
tests/negative/class-assign2-test.toit:8:3: error: Can't assign to class 'A'
  A += 3
  ^
Compilation failed
